# IAudioPalyer

./: settings.gradle
app/: build.gradle
app/doc/: 16kpcm文件信息.txt  功能分析手稿.txt  类设计稿.Java  解码音频示例.cpp
app/src/androidTest/java/com/wyl/iaudiopalyer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 16k.pcm  test.pcm
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/src/: AudioDecoder.h  AudioPlayer.h  BlockingQueue.cpp  BlockingQueue.h  PcmFrame.cpp  PcmFrame.h  PcmReader.cpp  PcmReader.h  Releaser.cpp  Releaser.h  log.h
app/src/main/cpp/src/jni/: JniHashMap.cpp  JniHashMap.h
app/src/main/java/com/wyl/iaudiopalyer/: AudioMetadata.java  MainActivity.java  MediaHelper.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wyl/iaudiopalyer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
